log
Fri Apr 22 23:12:45 HSP 2022: 
 tests:  1|8
total_score: 0/70
e98fbbb
Fri Apr 22 23:50:53 HSP 2022: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:46:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return new;
            ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
04b64d2
Fri Apr 22 23:53:26 HSP 2022: 
 treemap.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  0|0
81a2cd6
Fri Apr 22 23:55:58 HSP 2022: 
 treemap.c | 4 ----
 1 file changed, 4 deletions(-)
 tests:  2|8
total_score: 0/70
8b2bfe5
